# NBEAST-Flux

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  criticisms.md  environment.yml  launch.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: gui-redesign.md  phase0-notes.md  phase6-plan.md  validation.md
packaging/: RELEASE.md  build_installer.sh  construct.yaml  construct.yaml.in  make_data_bundle.py  make_macos_app.sh  post_install.sh
packaging/cad-dagmc-arm64/: README.md  example_generate.py  example_run.py  setup_env.sh
packaging/cad-support/: README.md  assemble_channel.sh  setup_cad_support.sh  smoke_test.sh
paper/: paper.bib  paper.md
spikes/: fetch_data.py  flux_mesh.py  pincell.py  run_worker.py  worker.py
tests/: conftest.py  test_benchmarks.py  test_cad.py  test_compare.py  test_copyable_errors.py  test_data.py  test_data_library.py  test_data_library_search.py  test_diagnostics.py  test_document.py  test_dyld_guard.py  test_export.py  test_export_report.py  test_fuzz_core.py  test_geometry_preview.py  test_gui_cad.py  test_gui_data.py  test_gui_diagnostics.py  test_gui_materials.py  test_gui_moderation.py  test_gui_params.py  test_gui_smoke.py  test_gui_tier3.py  test_gui_tier4.py  test_gui_ultimate.py  test_gui_viz.py  test_materials.py  test_persistence_fuzz.py  test_poisons.py  test_project.py  test_provenance.py  test_raw_export.py  test_reactivity.py  test_results.py  test_runner.py  test_stress_gui.py  test_studies.py  test_sweep.py  test_tier4.py  test_tracks.py  (+3 more)
(+72 files in other folders)
